--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -1,5 +1,26 @@
 body {
   margin : 0px;
   font-family: arial, sans-serif;
-  background-color: red;
+  background-color: cream;
+}
+
+form {
+  margin: 0 auto;
+}
+
+input {
+  height: 35px;
+  width: 585px;
+  border: 1px solid #d9d9d9;
+  font-size: 1.2em;
+  font-family: arial, sans-serif;
+  text-align: center;
+}
+
+input:hover {
+  border-color: #b9b9b9;
+}
+
+input:active, input:focus {
+  border-color: #4d90fe;
 }
