--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -1,7 +1,36 @@
+@font-face {
+  font-family: zonabold;
+  src: url(zonabold.otf);
+}
+
+@font-face {
+  font-family: zonathin;
+  src: url(zonathin.otf);
+}
+
 body {
   margin : 0px;
   font-family: arial, sans-serif;
   background-color: cream;
+  text-align: center;
+}
+
+.container {
+  min-width: 100vw;
+  position: absolute;
+  left: 0;
+  top: 50vh;
+  transform: translateY(-50%);
+}
+
+h1 {
+  margin-top: 0;
+  font-family: 'zonabold', monospace;
+  font-size: 3.2em;
+}
+
+h1 span {
+  font-family: 'zonathin', monospace;
 }
 
 form {
@@ -9,12 +38,12 @@ form {
 }
 
 input {
-  height: 35px;
-  width: 585px;
+  height: 25px;
+  width: 550px;
+  padding: 10px;
   border: 1px solid #d9d9d9;
   font-size: 1.2em;
   font-family: arial, sans-serif;
-  text-align: center;
 }
 
 input:hover {
