--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -11,11 +11,11 @@
 body {
   margin : 0px;
   font-family: arial, sans-serif;
-  background-color: cream;
+  color: #011E27;
   text-align: center;
 }
 
-.container {
+#webhistorian-container {
   min-width: 100vw;
   position: absolute;
   left: 0;
@@ -23,21 +23,22 @@ body {
   transform: translateY(-50%);
 }
 
-h1 {
+h1#webhistorian-h1 {
   margin-top: 0;
   font-family: 'zonabold', monospace;
-  font-size: 3.2em;
+  font-size: 3em;
 }
 
-h1 span {
+h1#webhistorian-h1 span#webhistorian-span {
   font-family: 'zonathin', monospace;
+  margin-right: 15px
 }
 
-form {
+form#webhistorian-form {
   margin: 0 auto;
 }
 
-input {
+input#webhistorian-input {
   height: 25px;
   width: 550px;
   padding: 10px;
@@ -46,10 +47,35 @@ input {
   font-family: arial, sans-serif;
 }
 
-input:hover {
+input#webhistorian-input:hover {
   border-color: #b9b9b9;
 }
 
-input:active, input:focus {
+input#webhistorian-input:active, input#webhistorian-input:focus {
   border-color: #4d90fe;
+}
+
+p#webhistorian-p {
+  width: 400px;
+  padding: 15px;
+  margin: 40px auto 0;
+  font-size: 0.9em;
+  color: #a94442;
+  background: #f2dede;
+  border: 1px solid #ebccd1;
+  border-radius: 4px;
+  animation: webhistorian-fadeout 3s ease-in forwards;
+}
+
+@keyframes webhistorian-fadeout {
+  80% {
+    color: #a94442;
+    background: #f2dede;
+    border-color: #ebccd1;
+  }
+  100% {
+    color: transparent;
+    background: transparent;
+    border-color: transparent;
+  }
 }
